Translate README.md at English.
- Add JavaDoc on classes of models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 # openexchangerates.org
-rates.url.today=https://openexchangerates.org/api/historical/${rates.date.today}.json?app_id=${rates.id}&base=${rates.base}
-rates.url.yesterday=https://openexchangerates.org/api/historical/${rates.date.yesterday}.json?app_id=${rates.id}&base=${rates.base}
+rates.url.historical=https://openexchangerates.org/api/historical/
 rates.id=3b6072a3260e4d67899639e0823a00c5
 rates.url.currencies=https://openexchangerates.org/api/currencies.json
-rates.date.today=2022-06-06
-rates.date.yesterday=2022-06-05
 rates.base=USD
 
 # giphy.com
